[package]
name = "rust-graphql"
version = "0.1.0"
authors = ["YutaSugimura <nextc3m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
env_logger = "0.9.0"
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"
juniper = "0.15.7"